# cli-usage-bar

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
packaging/: com.svenedik.cli-usage-bar.plist
src/cli_usage_bar/: __main__.py  alerts.py  app.py  config.py  models.py  pricing.py  watcher.py
src/cli_usage_bar/providers/: __init__.py  base.py  claude_code.py  claude_code_api.py  claude_code_auto.py  codex_cli.py
tests/: test_alerts.py  test_claude_code.py  test_claude_code_api.py  test_claude_code_auto.py  test_codex_cli.py  test_config.py
tests/fixtures/: claude_session.jsonl  codex_rollout.jsonl
